[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "global-news-crawler"
version = "0.1.0"
description = "Crawl 44 international news sites, analyze through 8-stage NLP pipeline, produce Parquet/SQLite output for social trend research."
readme = "README.md"
requires-python = ">=3.12,<3.14"  # D-7 (9): sync with main.py _check_python_version(), setup_init.py _check_domain_venv(), preflight_check.py check_python_version()
license = {text = "MIT"}

[project.scripts]
global-news = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
